--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     height: auto;
     background-color: black;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -13,11 +14,16 @@ body{
     src: url(asset/font/Oldenburg-Regular.ttf);
 }
 
+@font-face {
+    font-family: 'Pirou';
+    src: url(asset/font/Pirou-Regular.otf);
+}
+
 
 @media (max-width: 932px){
 
 body{
-    height: 100vh;
+    height: 400vh;
     width: 100vw;
     background-color: black;
     padding: 0;
@@ -25,16 +31,25 @@ body{
 }
 
 header{
-    background-color: black;
-    height: 93px;
+    background-color: transparent;
+    height: 10%;
     padding: 0;
     margin: 0;
     display: flex;
     align-items: center;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+}
+
+header.scrolled{
+    background-color: black;
 }
 
 .logo{
-    width: 18%;
+    max-width: 15%;
     height: 100%;
 }
 .logo img{
@@ -45,13 +60,12 @@ header{
 .title{
     color: white;
     font-size: 120%;
-    font-family: 'old english text mt' ,  sans-serif;
-    position: relative;
-    margin: 1%;
+    font-family: 'Oldenburg' ,  sans-serif;
+    width: 30%;
 }
 
 .menu{
-    width: 20%;
+    width: 55%;
     height: 100%;
     margin: 0;
     position: relative;
@@ -63,17 +77,17 @@ header{
     height: 3rem;
     position: fixed;
     top: 1.5rem;
-    right: 1rem;
     z-index: 200;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     cursor: pointer;
     transition: 0.7s;
+    right: 1rem;
 }
     
 .line{
-    width: 70%;
+    width: 100%;
     height: 0.4rem;
     background-color: #FF4500;
     box-shadow:  0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
@@ -108,7 +122,7 @@ header{
 
 
 .sidebartoggle .hamburger-menu{
-    right: 35%;
+    right: 30%;
 }
 
 @keyframes scale{
@@ -137,7 +151,7 @@ header{
     height: 100vh;
     position: fixed;
     top: 0;
-    right: -40rem;
+    right: -50%;
     background-color: white;
     transition: right 0.5s;
 }
@@ -178,9 +192,100 @@ header{
     color: #FF4500;
 }
 
+.content-1{
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
 
+.content-1 .image-container{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
 
+.content-1-img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    object-fit: cover;
+    z-index: -2;
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    top: 0;
+    left: o;
+}
 
+#toggleButton{
+    background-color: transparent;
+    color: #FF4500;
+    cursor: pointer;
+    position: absolute;
+    right: 3rem;
+    top: 85%;
+    font-size: 2rem;
+    font-family: 'Old english text mt', sans-serif;
+    padding: 0;
+    background: none;
+    border: none;
+}
 
+.content-1-img.active{
+    opacity: 1;
+}
 
+.menu-content-1{
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-family: 'Pirou', sans-serif;
+    overflow: hidden;
+    z-index: 0;
+}
+
+.menu-content-1 h1, .menu-content-1 h2{
+    margin: 0;
+    width: 100%;
+}
+
+.menu-content-1 h1{
+    font-size: 3rem;
+}
+
+.menu-content-1 h2{
+    font-size: 2rem;
+    font-weight: lighter;
+}
+.book-btn{
+    color: white ;
+    background-color: #FF4500;
+    border: none;
+    margin-top: 10%;
+    font-family: 'Oldenburg', sans-serif;
+    font-weight: bolder;
+    font-size: 1rem;
+    width: 35%;
+    height: 5%;
+    border-radius: 50px;
+    justify-content: center;
+}
+
+.book-btn:hover{
+    background-color: white;
+    color: #FF4500;
+}
+
+.menu-content-1 p{
+    width: 100%;
+    font-family: 'Oldenburg', sans-serif;
+    background-color: aquamarine;
+}
 }
