--- a/style.css
+++ b/style.css
@@ -197,58 +197,46 @@ header.scrolled{
     width: 100%;
     overflow: hidden;
     position: absolute;
-    z-index: -1;
+    z-index: 0;
 }
 
 .content-1 .image-container{
     width: 100%;
     height: auto;
     overflow: hidden;
+    z-index: -100;
+    position: relative;
 }
 
 .content-1-img{
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    width: auto;
+    height: 100vh;
+    position: relative;
     overflow: hidden;
     object-fit: cover;
     z-index: -2;
-    transition: opacity 0.5s ease;
-    opacity: 0;
+    transition: transform 0.5s ease;
+    transform: translateX(-100%);
     top: 0;
-    left: o;
+    left: 0;
 }
 
-#toggleButton{
-    background-color: transparent;
-    color: #FF4500;
-    cursor: pointer;
-    position: absolute;
-    right: 3rem;
-    top: 85%;
-    font-size: 2rem;
-    font-family: 'Old english text mt', sans-serif;
-    padding: 0;
-    background: none;
-    border: none;
-}
 
 .content-1-img.active{
-    opacity: 1;
+    transform: translateX(0);
 }
 
 .menu-content-1{
-    position: absolute;
     width: 100%;
-    top: 25%;
+    position: absolute;
+    top: 35%;
     height: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: white;
     font-family: 'Pirou', sans-serif;
-    overflow: hidden;
-    z-index: 0;
+    z-index: -1;
 }
 
 .menu-content-1 h1, .menu-content-1 h2{
@@ -257,35 +245,38 @@ header.scrolled{
 }
 
 .menu-content-1 h1{
-    font-size: 3rem;
+    font-size: 3.5rem;
 }
 
 .menu-content-1 h2{
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: lighter;
 }
-.book-btn{
+.content-1 button{
     color: white ;
     background-color: #FF4500;
-    border: none;
-    margin-top: 10%;
+    border: white;
+    margin-top: 20%;
     font-family: 'Oldenburg', sans-serif;
     font-weight: bolder;
     font-size: 1rem;
-    width: 35%;
-    height: 5%;
+    width: 50%;
+    height: 8%;
     border-radius: 50px;
     justify-content: center;
+    z-index: 100;
+    font-size: 1.5rem;
 }
 
-.book-btn:hover{
+.content-1 button:hover{
     background-color: white;
     color: #FF4500;
+    border-color: #FF4500;
 }
 
 .menu-content-1 p{
     width: 100%;
     font-family: 'Oldenburg', sans-serif;
-    background-color: aquamarine;
+    font-size: 1.5rem;
 }
 }
